--- a/app/LandmarkCIty/app/src/main/AndroidManifest.xml
+++ b/app/LandmarkCIty/app/src/main/AndroidManifest.xml
@@ -52,7 +52,6 @@
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
         <activity
             android:name=".activities.useraccesspackage.ForgotPasswordActivity"
-            android:noHistory="true"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
             android:noHistory="true"/>
@@ -119,23 +118,20 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".activities.useraccesspackage.ResetPasswordActivity"
-<<<<<<< HEAD
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden"
-            android:noHistory="true"></activity>
-=======
-            android:noHistory="true"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
-            android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
+            android:noHistory="true">
+
+        </activity>
         <activity
             android:name=".activities.featuresactivities.ProfileActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
-        <activity android:name=".activities.StoresListActivity"></activity>
->>>>>>> 62a698070e38b72a4dce0c565da48437d02b1377
+        <activity android:name=".activities.StoresListActivity">
+
+        </activity>
     </application>
 
 </manifest>
